# ai_manga_workflow

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  部署方案.md
.github/workflows/: deploy-tests.yml
config/: pipeline.example.yaml  pipeline.siliconflow.yaml
data/projects/: ancient_short.yaml  bie_peng_ta.yaml  demo_story.yaml  white_tower_lamp_case.yaml
deploy/: README.md
deploy/nginx/: ai_manga_workflow.conf
deploy/systemd/: ai-manga.service
docs/: AI_MANGA_WORKFLOW.md  AI_SCRIPT_GENERATION_OPTIMIZATION_PLAN.md  ARCHITECTURE.md  DEPLOYABLE_SERVER.md  MANUAL_GENERATION_RUNBOOK.md  MODEL_SELECTION_GUIDE.md  PRODUCTION_CHECKLIST.md  SILICONFLOW_SETUP.md  TENCENT_TTS_RESEARCH.md  WEB_CONSOLE.md
scripts/: list_siliconflow_models.py  poll_video_status_siliconflow.py  retry_media_edges_siliconflow.py  smoke_image_edit_siliconflow.py  smoke_low_cost_siliconflow.py  smoke_media_siliconflow.py  smoke_tencent_tts.py  smoke_video_i2v_neutral_siliconflow.py  smoke_video_t2v_siliconflow.py
src/manga_flow/: __init__.py  cli.py  config.py  pipeline.py  render.py  schemas.py  web.py
src/manga_flow/providers/: base.py  placeholder.py  siliconflow.py  tencent_tts.py
src/manga_flow/server/: __init__.py  app.py  auth.py  db.py
tests/: test_deploy_server.py
