[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-manga-workflow"
version = "0.1.0"
description = "A configurable AI manga-drama production workflow scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "jinja2>=3.1",
  "pillow>=11.0",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "rich>=13.7",
  "socksio>=1.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
manga-flow = "manga_flow.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
